perf: combine the create user and login user into one
